--- a/clover/package.json
+++ b/clover/package.json
@@ -12,16 +12,17 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.1.0",
-    "@angular/animations": "~9.1.0",
-    "@angular/common": "~9.1.0",
-    "@angular/compiler": "~9.1.0",
-    "@angular/core": "~9.1.0",
-    "@angular/forms": "~9.1.0",
-    "@angular/localize": "~9.1.0",
-    "@angular/platform-browser": "~9.1.0",
-    "@angular/platform-browser-dynamic": "~9.1.0",
-    "@angular/router": "~9.1.0",
+    "@angular/animations": "~10.0.4",
+    "@angular/common": "~10.0.4",
+    "@angular/compiler": "~10.0.4",
+    "@angular/core": "~10.0.4",
+    "@angular/forms": "~10.0.4",
+    "@angular/localize": "~10.0.4",
+    "@angular/platform-browser": "~10.0.4",
+    "@angular/platform-browser-dynamic": "~10.0.4",
+    "@angular/router": "~10.0.4",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@ngrx/store": "^10.0.0-beta.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.1",
     "ngx-toastr": "^12.0.1",
@@ -31,9 +32,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.901.7",
-    "@angular/cli": "~9.1.0",
-    "@angular/compiler-cli": "~9.1.0",
-    "@angular/language-service": "~9.1.0",
+    "@angular/cli": "^10.0.3",
+    "@angular/compiler-cli": "~10.0.4",
+    "@angular/language-service": "~10.0.4",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -49,6 +50,6 @@
     "style-loader": "^1.1.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "typescript": "~3.9.7"
   }
 }
